# CopenGL

./: .gitmodules  CMakeLists.txt  main.cpp  testCode.cpp
common/: MeGlWindow.cpp  MeGlWindow.h  MeShaderCode.cpp  helloWindow.cpp
common/Primitaves/: ShapeData.cpp  ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  Vertex.cpp  Vertex.h
common/camera/: Camera.cpp  Camera.h
freeglut/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.3.2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
glfw-3.3.2/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
glfw-3.3.2/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
glfw-3.3.2/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  (+3 more)
helper_files/: LoadShaders.h  common_drawing.cpp  common_drawing.h
shaders/: FragmentShaderCode.glsl  VertexShaderCode.glsl
